--- a/index.html
+++ b/index.html
@@ -46,8 +46,106 @@
           <div class="hero-text">
             <h1> Die besten rezepte für Webworker </h1>
             <h2> Es gibt mehr als Pizza & Ravioli </h2>
-            <a href="#">Entdecke die Leckerein </a>
+            <a href="#rezepte">Entdecke die Leckerein </a>
           </div>
+        </div>
+
+        <div class="wrapper flexbox">
+          <section id="rezepte">
+            <h2> Die neusten Rezepte </h2>
+
+
+            <div class="row flexbox">
+              <article class="card">
+                <img src="img/farfalle.jpg" alt="farfalle mit Pesto">
+
+                <div class="border">
+                <h3>Farfalle mit Pesto</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a href="#">Zum Rezept </a>
+                </div>
+              </article>
+
+
+              <article class="card">
+                <img src="img/reispfanne-lissabon.jpg" alt="Reispfanne Lissabon">
+                <div class="border">
+                <h3>Reispfanne Lissabon</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a href="#">Zum Rezept </a>
+                </div>
+              </article>
+            </div>
+
+              <div class="row flexbox">
+                <article class="card">
+                  <img src="img/kuerbissuppe.jpg" alt="Kürbissuppe">
+                  <div class="border">
+                  <h3>Kürbissuppe</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <a href="#">Zum Rezept </a>
+                  </div>
+                </article>
+
+                <article class="card">
+                  <img src="img/burger.jpg" alt="burger">
+                  <div class="border">
+                  <h3>Sauguter Burger</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <a href="#">Zum Rezept </a>
+                  </div>
+                </article>
+
+            </div>
+
+            <div class="row flexbox">
+              <article class="card">
+                <img src="img/toast-mit-ei.jpg" alt="tost-mit-ei">
+                <div class="border">
+                <h3>Tost mit Ei</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a href="#">Zum Rezept </a>
+                </div>
+              </article>
+
+              <article class="card">
+                <img src="img/pancakes.jpg" alt="pancakes">
+                <div class="border">
+                <h3>Pancakes</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a href="#">Zum Rezept </a>
+                </div>
+              </article>
+
+          </div>
+
+          </section>
+          <aside id="Sidebar">
+
+  <section>
+<section id="suche">
+<h2>Finde dein Rezept</h2>
+<form class="" action="https://www.google.de/search"
+ method="get">
+  <input type="search" name="q" value="" placeholder="Mhhhhhhh">
+  <button type="submit" name="button">
+  <span class="icon-search"></span>
+
+</form>
+</section>
+
+<section id="about">
+
+</section>
+
+
+<section id="affiliate">
+
+</section>
+
+
+        </aside>
+</section>
         </div>
 </main>
       <!-- hier kommt das java script-->
